tests/ui/rfcs/rfc-0000-never_patterns/ICE-133117-duplicate-never-arm.stderr
error: a never pattern is always unreachable
  --> $DIR/ICE-133117-duplicate-never-arm.rs:9:26
   |
LL |         (!|!) if true => {}
   |                          ^^ this will never be executed
   |
   = help: remove the match arm expression

error: a never pattern is always unreachable
  --> $DIR/ICE-133117-duplicate-never-arm.rs:10:26
   |
LL |         (!|!) if true => {}
   |                          ^^ this will never be executed
   |
   = help: remove the match arm expression

error: aborting due to 2 previous errors

